--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
 
     buildTypes {
         debug {
-            applicationIdSuffix ".debug"
+            // applicationIdSuffix that is not empty changes the package name and breaks maps.
+            // applicationIdSuffix ".debug"
         }
         release {
             minifyEnabled false
