--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx4608M
+org.gradle.unsafe.configuration-cache=true
