--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ android {
 
 
     namespace 'com.myflightbook.android'
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
@@ -56,19 +59,18 @@ dependencies {
     implementation files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.6'
-    implementation 'androidx.fragment:fragment-ktx:1.6.1'
-    implementation 'androidx.media:media:1.6.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.media:media:1.7.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     // Play services
     implementation 'com.google.android.gms:play-services-location:21.0.1'
