--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,30 +120,13 @@
                 <data android:mimeType="application/gpx+xml" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".EditAircraftActivity"
-            android:launchMode="singleTop"
-            android:theme="@style/MFBTheme"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".EditFlightActivity"
-            android:theme="@style/MFBTheme"
-            android:launchMode="singleTop"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".NewAircraftActivity"
-            android:theme="@style/MFBTheme"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".FlightQueryActivity"
-            android:theme="@style/MFBTheme"
-            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".FixedExpandableListActivity"
             android:theme="@style/MFBTheme">
         </activity>
-        <activity android:name=".RecentFlightsActivity"
-            android:theme="@style/MFBTheme">
-        </activity>
+        <activity
+            android:name=".FragmentHostActivity"
+            android:theme="@style/MFBTheme"
+            android:exported="false" />
         <activity
             android:name=".ActAddApproach"
             android:theme="@style/MFBTheme"
@@ -166,9 +149,6 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActViewProperties"
-            android:theme="@style/MFBTheme"
-            android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ViewTemplatesActivity"
             android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".ActWebView" android:theme="@style/MFBTheme" />
