--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.myflightbook.android"
         minSdk 28
         targetSdk 35
-        versionCode 183
-        versionName "2025.04.21"
+        versionCode 186
+        versionName "2025.04.21b"
     }
 
     buildTypes {
