--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.myflightbook.android"
         minSdk 28
         targetSdk 35
-        versionCode 187
-        versionName "2025.05.04"
+        versionCode 188
+        versionName "2025.05.05 - Private"
     }
 
     buildTypes {
