--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.myflightbook.android"
@@ -18,6 +18,7 @@ android {
         debug {
             // applicationIdSuffix that is not empty changes the package name and breaks maps.
             // applicationIdSuffix ".debug"
+            debuggable true
         }
         release {
             minifyEnabled false
@@ -58,7 +59,7 @@ dependencies {
     implementation files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
 
     // Kotlin
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.5.0'
 
     // AndroidX
