--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 36
+    compileSdk = 36
 
     defaultConfig {
         applicationId "com.myflightbook.android"
         minSdk 28
-        targetSdk 35
+        targetSdk 36
         versionCode 193
         versionName "2025.07.25"
     }
@@ -22,7 +22,7 @@ android {
         }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -60,19 +60,20 @@ dependencies {
 
     // Kotlin
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.6.0'
 
     // AndroidX
-    implementation 'androidx.activity:activity-ktx:1.10.1'
+    implementation 'androidx.activity:activity-ktx:1.12.1'
     implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'androidx.core:core-ktx:1.16.0'
-    implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.exifinterface:exifinterface:1.4.1'
-    implementation 'androidx.fragment:fragment-ktx:1.8.8'
-    implementation 'androidx.media:media:1.7.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.core:core-splashscreen:1.2.0'
+    implementation 'androidx.exifinterface:exifinterface:1.4.2'
+    implementation 'androidx.fragment:fragment-ktx:1.8.9'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation 'androidx.media:media:1.7.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.material:material:1.13.0'
 
     // Play services
     implementation 'com.google.android.gms:play-services-location:21.3.0'
